docs/v0.3.0a10/_sources/install/index.rst.txt

:orphan:

.. _install:

############
Installation
############

Release notes: `on GitHub <https://github.com/hpcflow/matflow-new/releases/tag/v0.3.0a10>`_

There are two ways of using MatFlow:
 * MatFlow CLI (Command Line Interface)
 * The MatFlow Python package

Both of these options allow workflows to be designed and executed. MatFlow CLI
is recommended for beginners and strongly recommended if you want to 
run MatFlow on a cluster. The MatFlow Python package allows workflows to be
designed and explored via the Python API and is recommended for users 
comfortable working with Python. If you are interested in contributing to 
the development of MatFlow, the Python package is the place to start.

MatFlow CLI and the MatFlow Python package can both be used simultaneously.

*******************************
MatFlow CLI
*******************************

Install script (v0.3.0a10)
===========================t

MatFlow CLI can be installed on macOS, Linux or Windows through a terminal
or shell prompt.

**macOS:** Open a terminal, paste the command shown below and press enter.

```bash
(touch tmp.sh && curl -fsSL https://raw.githubusercontent.com/hpcflow/install-scripts/main/src/install-matflow.sh > tmp.sh && bash tmp.sh --prerelease --path --onefile) ; rm tmp.sh
```

**Linux:** Open a shell prompt, paste the command shown below and press enter.

```bash
(touch tmp.sh && curl -fsSL https://raw.githubusercontent.com/hpcflow/install-scripts/main/src/install-matflow.sh > tmp.sh && bash tmp.sh --prerelease --path --onefile) ; rm tmp.sh
```

**Windows:** Open a Powershell terminal, paste the command shown below and 
press enter.

```bash
& $([scriptblock]::Create((New-Object Net.WebClient).DownloadString('https://raw.githubusercontent.com/hpcflow/install-scripts/main/src/install-matflow.ps1'))) -PreRelease -OneFile
```

Download binaries (v0.3.0a10)
===============================

Binaries are available in two formats:

  * A single executable file containing everything.
  * A folder containing an executable and supporting files.

Click below to download the MatFlow binary for your platform (other binary releases are available by using the version switcher in the top-right corner):

.. raw:: html

   <table class="binary-downloads-table">
     <tr><td>Linux executable</td><td><a href="https://github.com/hpcflow/matflow-new/releases/download/v0.3.0a10/matflow-v0.3.0a10-linux">matflow-v0.3.0a10-linux</a></td></tr>
     <tr><td>Linux folder</td><td><a href="https://github.com/hpcflow/matflow-new/releases/download/v0.3.0a10/matflow-v0.3.0a10-linux-dir.zip">matflow-v0.3.0a10-linux-dir.zip</a></td></tr>
     <tr><td>macOS executable</td><td><a href="https://github.com/hpcflow/matflow-new/releases/download/v0.3.0a10/matflow-v0.3.0a10-macOS">matflow-v0.3.0a10-macOS</a></td></tr>
     <tr><td>macOS folder</td><td><a href="https://github.com/hpcflow/matflow-new/releases/download/v0.3.0a10/matflow-v0.3.0a10-macOS-dir.zip">matflow-v0.3.0a10-macOS-dir.zip</a></td></tr>
     <tr><td>Windows folder</td><td><a href="https://github.com/hpcflow/matflow-new/releases/download/v0.3.0a10/matflow-v0.3.0a10-win-dir.zip">matflow-v0.3.0a10-win-dir.zip</a></td></tr>
     <tr><td>Windows executable</td><td><a href="https://github.com/hpcflow/matflow-new/releases/download/v0.3.0a10/matflow-v0.3.0a10-win.exe">matflow-v0.3.0a10-win.exe</a></td></tr>
   </table>

**************************
The MatFlow Python package
**************************

Using pip
==========================

Use pip to install the Python package from PyPI::

  pip install matflow==0.3.0a10

